tests/typing/bad/testfile-nil-4.go
package main

type T struct { a int }
func main() { x := nil.a }
